added the .CSS files and fixed some bugs

--- a/Quran_Memorizing_System/Pages/Performance_Review.cshtml
+++ b/Quran_Memorizing_System/Pages/Performance_Review.cshtml
@@ -3,7 +3,9 @@
 @{
     ViewData["Title"] = "Performance Review";
 }
-
+@section Styles {
+    <link rel="stylesheet" href="~/css/Performance_Review.css" asp-append-version="true" />
+}
 <div class="performance-container">
 
     <h1 class="page-title">Performance Review</h1>
