adding circile page and home page GUI

--- a/Quran_Memorizing_System/Pages/Index.cshtml
+++ b/Quran_Memorizing_System/Pages/Index.cshtml
@@ -1,10 +1,5 @@
-﻿@page
-@model IndexModel
+@page
 @{
-    ViewData["Title"] = "Home page";
+    // Redirect root URL to the existing Home page to avoid 404
+    Response.Redirect("/Home");
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
