Forgot and profile Sayed Numan

--- a/Quran_Memorizing_System/Pages/Login_Page.cshtml
+++ b/Quran_Memorizing_System/Pages/Login_Page.cshtml
@@ -76,7 +76,7 @@
                     </button>
 
                     <div class="text-center mt-3">
-                        <a href="/ForgotPassword">Forgot your password?</a>
+                        <a href="/Forgot_Password">Forgot your password?</a>
                     </div>
 
                 </div>
