--- a/Quran_Memorizing_System/Pages/Shared/_Layout.cshtml
+++ b/Quran_Memorizing_System/Pages/Shared/_Layout.cshtml
@@ -27,9 +27,9 @@
                 </ul>
 
                 <div class="ms-auto">
-                    <button class="btn btn-outline-secondary profile-btn d-flex align-items-center justify-content-center">
+                    <a href="/Profile" class="btn btn-outline-secondary profile-btn d-flex align-items-center justify-content-center text-decoration-none">
                         <i class="bi bi-person"></i>
-                    </button>
+                    </a>
                 </div>
             </div>
         </nav>
