--- a/Quran_Memorizing_System/Pages/Home.cshtml
+++ b/Quran_Memorizing_System/Pages/Home.cshtml
@@ -7,6 +7,7 @@
 <div class="d-flex flex-row justify-content-between">
 
     <div class="d-flex flex-column col-md-9 mt-4">
+        @if (!Model.isAdmin){
         <!-- booking div -->
         <div class="d-flex justify-content-center">
             <div class="d-flex align-items-center justify-content-between border rounded-3 p-3 w-75">
@@ -25,7 +26,7 @@
 
             </div>
         </div>
-
+        }
         <!-- circle  cards -->
         <div class="d-flex flex-row justify-content-between col-md-9 m-4">
             @foreach (var circle in Model.Circles)
