Finish All the Add exam

--- a/Quran_Memorizing_System/Pages/CreateExam.cshtml
+++ b/Quran_Memorizing_System/Pages/CreateExam.cshtml
@@ -158,7 +158,7 @@
 
                     <div class="mb-3">
                         <label class="form-label">Correct Answer</label>
-                        <select class="form-select correct-answer-select" data-question-index="${questionCounter - 1}" required>
+                        <select class="form-select correct-answer-select" data-question-index="${questionCounter - 1}">
                             <option value="" data-choice-index="0">Choice 1</option>
                             <option value="" data-choice-index="1">Choice 2</option>
                             <option value="" data-choice-index="2">Choice 3</option>
