--- a/Quran_Memorizing_System/Pages/Shared/_Layout.cshtml
+++ b/Quran_Memorizing_System/Pages/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
 
                 <ul class="navbar-nav flex-row">
                     <li class="nav-item me-3"><a class="nav-link @(currentPath == "/lessonssearch" ? "active" : "")" asp-page="/LessonsSearch"> Lessons </a></li>
-                    <li class="nav-item me-3"><a class="nav-link @(currentPath == "/searchcircuits" ? "active" : "")" asp-page="/SearchCircuits">circles</a></li>
+                    <li class="nav-item me-3"><a class="nav-link @(currentPath == "/searchcircuits" ? "active" : "")" asp-page="/SearchCircuits">Circles</a></li>
                     <li class="nav-item me-3"><a class="nav-link @(currentPath == "/book_sessions" || currentPath == "/book_sessions/index" || currentPath == "/book_sessions" ? "active" : "")" asp-page="/Book_Sessions">Book Session</a></li>
                     @if (role)
                     {
